--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   </head>
   <body>
     <div class="container">
-    <div class="frame">
-      </div>
+      <div class="frame">
+        <div class="header">
+        <button class="header-btn">add</button>
+        <h1 class="header-title ">todo list</h1>  
+        <button class="header-btn warna-merah">clear</button> 
+
+  </div>
   </body>
 </html>
