--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
   <body>
     <div class="container">
       <div class="frame">
-        <div class="header">
+        <section class="header">
         <button class="header-btn">add</button>
         <h1 class="header-title ">todo list</h1>  
         <button class="header-btn warna-merah">clear</button> 
+        </section>
 
+      <section class="add">
+      <form class="add-form">
+      <input type="text" class="add-input">
+        <button class="add-btn">add</button>
+      </form>
+      
   </div>
   </body>
 </html>
